--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -8,6 +8,7 @@
 | Bertagnolli | 3313      |
 | Charette    | 3852      |
 | Crabtree    | 3372      |
+| Cunningham  | 3796      |
 | Dyer        | 3444      |
 | Eaton       | 3606      |
 | Formway     | 3364      |
