--- a/MyMovieList.wiki
+++ b/MyMovieList.wiki
@@ -1,31 +1,31 @@
 Ride Along
 The Lincoln Lawyer
 Nebraska
-Dallas Buyers Club
-American Hustle
+-Dallas Buyers Club
+-American Hustle
 *Particle Fever
 *Tim's Vermeer
 *Lord of War
-The Descendants
+-The Descendants
 Michael Clayton
 Captain America - The Winter Soldier
-The Long Good Friday
+-The Long Good Friday
 *Boogie Nights
 Futureshock the documentary
 Prisoners
 *The Normal Heart
 *The Leftovers HBO 6/29
-Neighbors
+-Neighbors
 Almost Famous
 *The Kingdom
 Boyhood
 Lars and The Real Girl
 Whiplash
 Date My Porn Star
-Born Rich
+-Born Rich
 This is What Winning Looks Like
 Inside Germany's Sex Supermarkets
-United States of Secrets
+-United States of Secrets
 War Made Easy
 Inside Job
 The Islamic State
