--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -16,6 +16,7 @@
 | Hellsund    | 3081      |
 | Higgins     | 3014      |
 | Lewis       | 3767      |
+| Marshburn   | 3010      |
 | Martinez    | 3700      |
 | McAllister  | 3781      |
 | McMannis    | 3499      |
