--- a/106726.wiki
+++ b/106726.wiki
@@ -42,6 +42,7 @@
 	* [[Schedule Update - DD2014-11-30]]
 	* [[Schedule Update - DD2014-12-14]]
 	* [[Schedule Update - DD2014-12-28]]
+	* [[Schedule Update - DD2014-01-25]]
 	 
 
 * [[file:///S:/Caelus/General/Monthly Internal Report|Monthly Internal Report]]
