--- a/106726.wiki
+++ b/106726.wiki
@@ -43,8 +43,12 @@
 	* [[Schedule Update - DD2014-12-14]]
 	* [[Schedule Update - DD2014-12-28]]
 	* [[Schedule Update - DD2014-01-25]]
+		* [[c:/Users/jdavis2/Dropbox/vimwiki/Schedule Update Log - DD2015-01-25.wiki]]
+		* [[CriticalPathAnalysis_DD01252015]]
 	 
-
+* Schedule Change Notices
+	* [[January2015]]
+*
 * [[file:///S:/Caelus/General/Monthly Internal Report|Monthly Internal Report]]
 
 == Project Tracking ==
