--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -15,7 +15,9 @@
 | Guevara     | 3490      |
 | Hellsund    | 3081      |
 | Higgins     | 3014      |
+| LaValley    | 3009      |
 | Lewis       | 3767      |
+| Mabe        | 3167      |
 | Marshburn   | 3010      |
 | Martinez    | 3700      |
 | McAllister  | 3781      |
@@ -23,6 +25,7 @@
 | McGowan     | 3707      |
 | Olson, M    | 3802      |
 | Otero       | 3130      |
+| Ridenhour   | 3379      |
 | Schramer    | 3714      |
 | Tolliver    | 3430      |
 | Wazny       | 3786      |
