--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -17,7 +17,7 @@
 | Higgins     | 3014      |
 | LaValley    | 3009      |
 | Lewis       | 3767      |
-| Mabe        | 3167      |
+| Maksin      | 3735      |
 | Marshburn   | 3010      |
 | Martinez    | 3700      |
 | McAllister  | 3781      |
