--- a/Portfolio to Share with Kevin at Review.wiki
+++ b/Portfolio to Share with Kevin at Review.wiki
@@ -3,5 +3,5 @@ Weekly PC Deck for Team Meeting
 IPDMS reports
 Blue and White Week Cadences
 Percent Complete Updating
-Remaining Unit Updating
+Remaining Units Updating
 
