--- a/diary/diary.wiki
+++ b/diary/diary.wiki
@@ -2,7 +2,25 @@
 
 == 2015 ==
 
+=== February ===
+        * [[2015-02-12]]
+        * [[2015-02-11]]
+        * [[2015-02-10]]
+        * [[2015-02-09]]
+        * [[2015-02-06]]
+        * [[2015-02-05]]
+        * [[2015-02-04]]
+        * [[2015-02-03]]
+        * [[2015-02-02]]
+
 === January ===
+        * [[2015-01-30]]
+        * [[2015-01-29]]
+        * [[2015-01-28]]
+        * [[2015-01-27]]
+        * [[2015-01-23]]
+        * [[2015-01-22]]
+        * [[2015-01-21]]
         * [[2015-01-20]]
         * [[2015-01-19]]
         * [[2015-01-16]]
