--- a/index.wiki
+++ b/index.wiki
@@ -7,8 +7,9 @@
 [[MyReadingList]]
 [[MyMovieList]]
 [[ProjectControlsGlossary]]
-
-
+	[[EHTC]]
+	[[Change Management]]
+[[Quotes]]
 
 [[Portfolio to Share with Kevin at Review]]
 
