--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -17,12 +17,13 @@
 | Higgins     | 3014      |
 | LaValley    | 3009      |
 | Lewis       | 3767      |
-| Maksin      | 3735      |
+| Mabe        | 3167      |
 | Marshburn   | 3010      |
 | Martinez    | 3700      |
 | McAllister  | 3781      |
 | McMannis    | 3499      |
 | McGowan     | 3707      |
+| Olson, B    | 3086      |
 | Olson, M    | 3802      |
 | Otero       | 3130      |
 | Ridenhour   | 3379      |
