--- a/MyMovieList.wiki
+++ b/MyMovieList.wiki
@@ -18,9 +18,9 @@ Prisoners
 -Neighbors
 Almost Famous
 *The Kingdom
-Boyhood
+-Boyhood
 Lars and The Real Girl
-Whiplash
+-Whiplash
 Date My Porn Star
 -Born Rich
 This is What Winning Looks Like
@@ -30,4 +30,8 @@ War Made Easy
 -Inside Job
 The Islamic State
 -Real Steel
-The Imitation Game
+-The Imitation Game
+Body of Lies
+-Black Mirror (Netflix Series)
+-Foxcather
+-Theory of Everything
