--- a/MyReadingList.wiki
+++ b/MyReadingList.wiki
@@ -17,4 +17,4 @@ William Gibson, Virtual Light
 Geoffrey Chaucer, Canterbury
 Me, Inc. by Gene Simmons
 The End of Power
-The Illustrated Man, Ray Bradbury
+*The Illustrated Man, Ray Bradbury
