--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -20,3 +20,17 @@ John Lithgow - "Time sneaks up on you like a windshield on a bug."
 The scientific theory I like best is that the rings of Saturn are composed entirely of lost airline luggage.
 Be Seen, Not Herd.
 Loud Pipes Make Noise.
+"It is better to offer no excuse than a bad one." - George Washington
+“I have done my share, it is time to go. I will do it elegantly.” - Albert Einstein
+"Change is the end result of all true learning." - Leo Buscaglia
+"All my life, I always wanted to be somebody. Now I see that I should have been more specific."
+“If you tell the truth you don't have to remember anything.” - Mark Twain’s Notebook, 1894
+I am eagerly awaiting my next disappointment. —Ashleigh Brilliant
+Every man’s memory is his private literature. —Aldous Huxley
+Life is what happens to you while you’re busy making other plans. —John Lennon
+Life is really simple, but we insist on making it complicated. —Confucius
+Do not dwell in the past, do not dream of the future, concentrate the mind on the
+present moment. —Buddha
+The more decisions that you are forced to make alone, the more you are aware of
+your freedom to choose. —Thornton Wilder
+"Somewhere, something incredible is waiting to be known." - Carl Sagan 
