--- a/index.wiki
+++ b/index.wiki
@@ -10,6 +10,9 @@
 	[[EHTC]]
 	[[Change Management]]
 [[Quotes]]
+[[MySimpleRules]]
+[[LessonsLearned]]
+
 
 [[Portfolio to Share with Kevin at Review]]
 
