--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -1,11 +1,11 @@
 The more I learn, the less I understand - Socrates
 When my mood gets too hot and I find myself wandering beyond control I pull out my motor-bike and hurl it top-speed through these unfit roads for hour after hour. - T.E. Lawrence
 Once more unto the breach, dear friends, once more; - Shakespeare, Henry V
-It is the mark of an educated mind to rest satisfied with the degree of precision which the nature of the subject admits and not to seek exactness where only an approximation is possible — Aristotle (384 B.C - 322 B.C.)
+It is the mark of an educated mind to rest satisfied with the degree of precision which the nature of the subject admits and not to seek exactness where only an approximation is possible â€” Aristotle (384 B.C - 322 B.C.)
 To achieve great things, two things are needed; a plan, and not quite enough time. - Leonard Bernstein
 Progress is man's ability to complicate simplicity. - Thor Heyerdahl
 Fortune favors the bold - Virgil
-Hofstadter’s Law: “Everything takes longer than you expect, even when you take into account Hofstadter’s Law.”
+Hofstadterâ€™s Law: â€œEverything takes longer than you expect, even when you take into account Hofstadterâ€™s Law.â€
 A job will always take twice the estimated time, raised to the next higher customary time unit. E.g., if I estimate that a job will take one hour, it will actually take two days
 To delight in war is a merit in the soldier, a dangerous quality in the captain, and a positive crime in the statesman. -George Santayana, philosopher (1863-1952)
 Punctuality is the virtue of the bored.
@@ -21,16 +21,18 @@ The scientific theory I like best is that the rings of Saturn are composed entir
 Be Seen, Not Herd.
 Loud Pipes Make Noise.
 "It is better to offer no excuse than a bad one." - George Washington
-“I have done my share, it is time to go. I will do it elegantly.” - Albert Einstein
+â€œI have done my share, it is time to go. I will do it elegantly.â€ - Albert Einstein
 "Change is the end result of all true learning." - Leo Buscaglia
 "All my life, I always wanted to be somebody. Now I see that I should have been more specific."
-“If you tell the truth you don't have to remember anything.” - Mark Twain’s Notebook, 1894
-I am eagerly awaiting my next disappointment. —Ashleigh Brilliant
-Every man’s memory is his private literature. —Aldous Huxley
-Life is what happens to you while you’re busy making other plans. —John Lennon
-Life is really simple, but we insist on making it complicated. —Confucius
+â€œIf you tell the truth you don't have to remember anything.â€ - Mark Twainâ€™s Notebook, 1894
+I am eagerly awaiting my next disappointment. â€”Ashleigh Brilliant
+Every manâ€™s memory is his private literature. â€”Aldous Huxley
+Life is what happens to you while youâ€™re busy making other plans. â€”John Lennon
+Life is really simple, but we insist on making it complicated. â€”Confucius
 Do not dwell in the past, do not dream of the future, concentrate the mind on the
-present moment. —Buddha
+present moment. â€”Buddha
 The more decisions that you are forced to make alone, the more you are aware of
-your freedom to choose. —Thornton Wilder
-"Somewhere, something incredible is waiting to be known." - Carl Sagan 
+your freedom to choose. â€”Thornton Wilder
+"Somewhere, something incredible is waiting to be known." - Carl SaganÂ 
+"Every now and then, you realize, with perfect clarity, that you are just not where you want to be."
+"Fuel injection is like measuring the amount of sugar in your recipe with a measuring cup, and tasting it to see how much you should put in. Carburetion is like throwing a bag of sugar against the ceiling fan in your kitchen while the pot is uncovered. If you need a different amount of sugar, you use a different sized bag, or spin the fan at a different speed, or change the pitch of the ceiling fan blades."
