--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -13,8 +13,7 @@ Some people drink from the fountain of knowledge, others just gargle.
 Everyone you will ever meet knows something you don't. - Bill Nye
 Quantity has a quality all it's own. - Josef Stalin
 Parkinson's Law - a task will swell in (perceived) importance and complexity in relation to the time allotted for its completion.
-I love sleep. My life has the tendency to fall apart when I'm awake, you know?
-- Ernest Hemingway
+I love sleep. My life has the tendency to fall apart when I'm awake, you know? - Ernest Hemingway
 To be present, this is love.
 John Lithgow - "Time sneaks up on you like a windshield on a bug."
 The scientific theory I like best is that the rings of Saturn are composed entirely of lost airline luggage.
@@ -35,4 +34,5 @@ The more decisions that you are forced to make alone, the more you are aware of
 your freedom to choose. —Thornton Wilder
 "Somewhere, something incredible is waiting to be known." - Carl Sagan 
 "Every now and then, you realize, with perfect clarity, that you are just not where you want to be."
-"Fuel injection is like measuring the amount of sugar in your recipe with a measuring cup, and tasting it to see how much you should put in. Carburetion is like throwing a bag of sugar against the ceiling fan in your kitchen while the pot is uncovered. If you need a different amount of sugar, you use a different sized bag, or spin the fan at a different speed, or change the pitch of the ceiling fan blades."
+"Fuel injection is like measuring the amount of sugar in your recipe with a measuring cup, and tasting it to see how much you should put in. Carburetion is like throwing a bag of sugar against the ceiling fan in your kitchen while the pot is uncovered. If you need a different amount of sugar, you use a different sized bag, or spin the fan at a different speed, or change the pitch of the ceiling fan blades.
+“I am a part of all that I have met.” -Alfred Tennyson
