--- a/MyReadingList.wiki
+++ b/MyReadingList.wiki
@@ -18,3 +18,4 @@ Geoffrey Chaucer, Canterbury
 Me, Inc. by Gene Simmons
 The End of Power
 *The Illustrated Man, Ray Bradbury
+I Will Fear No Evil - Robert Heinlein
