--- a/Quotes.wiki
+++ b/Quotes.wiki
@@ -36,3 +36,15 @@ your freedom to choose. Thornton Wilder
 "Every now and then, you realize, with perfect clarity, that you are just not where you want to be."
 "Fuel injection is like measuring the amount of sugar in your recipe with a measuring cup, and tasting it to see how much you should put in. Carburetion is like throwing a bag of sugar against the ceiling fan in your kitchen while the pot is uncovered. If you need a different amount of sugar, you use a different sized bag, or spin the fan at a different speed, or change the pitch of the ceiling fan blades.
 "I am a part of all that I have met." -Alfred Tennyson
+..."change is going to happen and you need to be willing to reinvent yourself over and over again rather than getting complacent with life and developing a sense of entitlement." - James Clear
+"If you're good at something, don't do it for free."
+"We owe to the Middle Ages the two worst inventions of humanity - romantic love and gunpowder." - Andre Maurois
+"The only time a woman really succeeds in changing a man is when he is a baby." Natalie Wood
+"You have succeeded in life when all you really want is only what you really need." Vernon Howard
+"People who know little are usually great talkers, while men who know much say little." Jean-Jacques Rousseau
+"The truth is more important than the facts." Frank Lloyd Wright
+"Honest disagreement is often a good sign of progress." Mahatma Gandhi
+"Be true to your work, your word, and your friend." John Boyle O'Reilly
+"Just remember, once you're over the hill you begin to pick up speed." Arthur Schopenhauer
+"Courage is fear holding on a minute longer." George S. Patton
+"It is the chiefest point of happiness that a man is willing to be what he is." Desiderius Erasmus
