--- a/White Week Cadence.wiki
+++ b/White Week Cadence.wiki
@@ -9,10 +9,7 @@ White Week Cadence
 * [ ] Complete Time Sheet
 
 = Tuesday =
-* [ ] Run informational 014 and 006 reports for the prior period
-        * [ ] Update "zero-earned" report for team meeting
-* [ ] Update [[file:///S:/Caelus/106726/Project Controls/Davis/Procurement Chart.xlsx|Procurement Chart]]
-* [ ] Update [[file:///F:/106726/106726 - NDS-1 - Overdue MRs.xlsx|Overdue MR Report]]
+* [ ] Run informational 014, 018, and 006 reports for the prior period
 * [ ] Update Team Meeting Deck
 * [ ] Complete Time Sheet
 * [ ] Update Project Go Binder
